--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </nav>
 
   <div class="welcome">
-    <p>Hello! I'm <strong>[Your Name]</strong>, a passionate web developer and tech enthusiast. <br>
+    <p>Hello! I'm <strong>Sofiya</strong>, a passionate web developer and tech enthusiast. <br>
     Explore my work and journey through this site!</p>
   </div>
 
