--- a/about.html
+++ b/about.html
@@ -62,6 +62,21 @@
 <body>
 
   <header>👤 About Me</header>
+  <div class="container">
+  <h2>Hello, I'm Sofiya Priya 👋</h2>
+  <p>I’m currently a 3rd year IT student with a strong passion for learning and leadership...</p>
+  <!---->
+    <ul>
+  <li>🎓 3rd year IT student under Anna University</li>
+  <li>🏫 Studied in government schools; joined college through 7.5% reservation scheme by merit</li>
+  <li>📢 Participated in multiple symposiums and presented technical seminars</li>
+  <li>🎮 Tenicket (ring ball) player – skilled in teamwork and discipline</li>
+  <li>👥 Group leader in many academic projects</li>
+  <li>💡 Strong skills in communication, leadership, and coordination</li>
+</ul>
+
+</div>
+  
 
   <nav>
     <a href="index.html">Home
