--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <nav>
     <a href="about.html">About</a>
-    <a href="projects.html">Projects</a>
+    <a href="projects.html">Skills</a>
     <a href="contact.html">Contact</a>
   </nav>
 
