--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #00c6ff, #0072ff);
-      color: white;
+      font-family: 'Poppins', sans-serif;
+      background-color: linear-gradient(to right, #ffe0e9, #0072ff);
+      color: #333;
       text-align: center;
     }
 
