--- a/skills.html
+++ b/skills.html
@@ -85,7 +85,9 @@
 
   <footer>
     🚀 Powered by passion & curiosity!
-  </footer>
+  </footer
+    <nav>
+    <a href="index.html">Home
 
 </body>
 </html>
