--- a/skills.html
+++ b/skills.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Skills</title>
   <style>
     body {
@@ -39,13 +39,13 @@
       text-decoration: underline;
     }
 
-    .skills-container {
+    .container {
       padding: 40px 20px;
       max-width: 800px;
       margin: auto;
     }
 
-    .skill {
+    .h2 {
       background: #d1fae5;
       margin: 10px 0;
       padding: 15px;
@@ -68,12 +68,7 @@
   <header>💡 My Skills</header>
 
   <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="Skills.html">Skills</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-
+  
   <div class="skills-container">
     <div class="skill">✔️ HTML, CSS, JavaScript</div>
     <div class="skill">✔️ Python, Java</div>
