--- a/index.html
+++ b/index.html
@@ -1,94 +1,96 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Priya's Portfolio</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background-color: linear-gradient(to right, #ffe0e9, #0072ff);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #fdeff9, #ecf0f1);
       color: #333;
-      text-align: center;
     }
-
-    header {
-      padding: 20px;
-      background-color: rgba(0, 0, 0, 0.2);
-      font-size: 28px;
-      font-weight: bold;
-      letter-spacing: 1px;
-      animation: blink 2s infinite;
-    }
-
     nav {
-      margin: 20px 0;
+      background-color: #ffb6b9;
+      padding: 1em;
+      display: flex;
+      justify-content: center;
+      gap: 2em;
     }
-
     nav a {
-      margin: 0 15px;
       text-decoration: none;
-      font-size: 20px;
-      color: #ffeb3b;
+      color: #fff;
       font-weight: bold;
+      padding: 0.5em 1em;
+      background: #ff6f61;
+      border-radius: 10px;
       transition: 0.3s;
     }
-
     nav a:hover {
-      color: #fff;
-      background-color: #f50057;
-      padding: 5px 10px;
-      border-radius: 8px;
+      background: #ff3b3f;
     }
-
-    .welcome {
-      margin-top: 50px;
-      font-size: 24px;
-      animation: slidein 2s ease;
+    .container {
+      text-align: center;
+      margin-top: 100px;
     }
-
-    footer {
-      margin-top: 80px;
-      padding: 10px;
-      background-color: rgba(0, 0, 0, 0.2);
+    h1 {
+      font-size: 3em;
+      color: #e91e63;
     }
-
-    @keyframes blink {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0.5; }
-    }
-
-    @keyframes slidein {
-      from {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+    p {
+      font-size: 1.2em;
+      color: #555;
     }
   </style>
 </head>
 <body>
-
-  <header>✨ Welcome to My Portfolio ✨</header>
-
   <nav>
     <a href="about.html">About</a>
-    <a href="Skills.html">Skills</a>
+    <a href="skills.html">Skills</a>
     <a href="contact.html">Contact</a>
   </nav>
-
-  <div class="welcome">
-    <p>Hello! I'm <strong>Sofiya</strong>, a passionate web developer and tech enthusiast. <br>
-    Explore my work and journey through this site!</p>
+  <div class="container">
+    <h1>Welcome to Priya's Portfolio</h1>
+    <p>Aspiring IT Professional | Creative Thinker | Team Leader</p>
   </div>
-
-  <footer>
-    © 2025 My Portfolio. All rights reserved.
-  </footer>
-
 </body>
-</html>
+
+
+
+</html><!-- about.html --><!DOCTYPE html><html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Priya</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #fff0f5;
+      color: #333;
+      padding: 2em;
+    }
+    h2 {
+      color: #d63384;
+    }
+    ul {
+      line-height: 1.8;
+    }
+  </style>
+</head>
+<body>
+  <h2>About Me</h2>
+  <ul>
+    <li>3rd Year IT Student</li>
+    <li>Completed full school education in government institutions</li>
+    <li>Qualified under 7.5% reservation scheme</li>
+    <li>Attended several symposiums and presented seminars</li>
+    <li>Player of Tenicket (a ring ball game)</li>
+    <li>Leadership experience as a team/group leader</li>
+  </ul>
+</body>
+
+
+
+     
+
+
