--- a/about.html
+++ b/about.html
@@ -1,82 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
+</html><!-- about.html --><!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Me</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Priya</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background-color: #f0f4f8;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #fff0f5;
       color: #333;
+      padding: 2em;
     }
-
-    header {
-      background-color: #4f46e5;
-      color: white;
-      padding: 20px;
-      text-align: center;
-      font-size: 28px;
-    }
-
-    nav {
-      background: #e0e7ff;
-      padding: 10px;
-      text-align: center;
-    }
-
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-      color: #4338ca;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 50px auto;
-      background: white;
-      border-radius: 12px;
-      padding: 30px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-
     h2 {
-      color: #4f46e5;
+      color: #d63384;
     }
-
-    footer {
-      text-align: center;
-      background-color: #4f46e5;
-      color: white;
-      padding: 15px;
-      margin-top: 50px;
+    ul {
+      line-height: 1.8;
     }
   </style>
 </head>
 <body>
+  <h2>About Me</h2>
+  <ul>
+    <li>3rd Year IT Student</li>
+    <li>Completed full school education in government institutions</li>
+    <li>Qualified under 7.5% reservation scheme</li>
+    <li>Attended several symposiums and presented seminars</li>
+    <li>Player of Tenicket (a ring ball game)</li>
+    <li>Leadership experience as a team/group leader</li
+    <li>Strong skills in communication, leadership, and coordination</li>
+  </ul>
+</body>
 
-  <header>👤 About Me</header>
-  <div class="container">
-  <h2>Hello, I'm Sofiya Priya 👋</h2>
-  <p>I’m currently a 3rd year IT student with a strong passion for learning and leadership...</p>
-  <!---->
-    <ul>
-  <li>🎓 3rd year IT student under Anna University</li>
-  <li>🏫 Studied in government schools; joined college through 7.5% reservation scheme by merit</li>
-  <li>📢 Participated in multiple symposiums and presented technical seminars</li>
-  <li>🎮 Tenicket (ring ball) player – skilled in teamwork and discipline</li>
-  <li>👥 Group leader in many academic projects</li>
-  <li>💡 Strong skills in communication, leadership, and coordination</li>
-</ul>
 
-</div>
   
 
-  <nav>
-    <a href="index.html">Home
+  
