--- a/skills.html
+++ b/skills.html
@@ -1,88 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skills</title>
   <style>
     body {
-      background: #f3f4f6;
-      font-family: 'Verdana', sans-serif;
-      margin: 0;
-      padding: 0;
-      color: #1f2937;
+      background-color: #e0f7fa;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #333;
+      padding: 2em;
     }
-
-    header {
-      background: #10b981;
-      color: white;
-      padding: 20px;
-      font-size: 28px;
+    h2 {
+      color: #00796b;
       text-align: center;
     }
-
-    nav {
-      text-align: center;
-      background: #e0f2f1;
-      padding: 10px;
+    .skills {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1em;
     }
-
-    nav a {
-      margin: 0 15px;
-      color: #065f46;
+    .skill {
+      background: #b2dfdb;
+      padding: 1em 2em;
+      border-radius: 12px;
       font-weight: bold;
-      text-decoration: none;
-      font-size: 18px;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    .container {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-
-    .h2 {
-      background: #d1fae5;
-      margin: 10px 0;
-      padding: 15px;
-      border-left: 5px solid #047857;
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-
-    footer {
-      text-align: center;
-      padding: 15px;
-      background: #10b981;
-      color: white;
-      margin-top: 40px;
+      box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
     }
   </style>
 </head>
 <body>
-
-  <header>💡 My Skills</header>
-
-  <nav>
-  
-  <div class="skills-container">
-    <div class="skill">✔️ HTML, CSS, JavaScript</div>
-    <div class="skill">✔️ Python, Java</div>
-    <div class="skill">✔️ Node.js & Express.js</div>
-    <div class="skill">✔️ MySQL, MongoDB</div>
-    <div class="skill">✔️ Git & GitHub</div>
-    <div class="skill">✔️ Responsive Design</div>
+  <h2>My Skills</h2>
+  <div class="skills">
+    <div class="skill">HTML</div>
+    <div class="skill">CSS</div>
+    <div class="skill">JavaScript</div>
+    <div class="skill">Python</div>
+    <div class="skill">Git & GitHub</div>
+    <div class="skill">Leadership</div>
+    <div class="skill">Communication</div>
+    <div class="skill">Hindi Language</div>
   </div>
-
-  <footer>
-    🚀 Powered by passion & curiosity!
-  </footer
-    <nav>
-    <a href="index.html">Home
-
 </body>
-</html>
+ 
+
+   
