--- a/about.html
+++ b/about.html
@@ -30,6 +30,9 @@
     <li>Strong skills in communication, leadership, and coordination</li>
   </ul>
 </body>
+  <nav>
+    <a href="index.html">Home
+  </nav>
 
 
   
