--- a/about.html
+++ b/about.html
@@ -1,40 +1,21 @@
-</html><!-- about.html --><!DOCTYPE html><html lang="en">
+</html><!-- =============================== --><!--        about.html (ABOUT)       --><!-- =============================== --><!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Priya</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #fff0f5;
-      color: #333;
-      padding: 2em;
-    }
-    h2 {
-      color: #d63384;
-    }
-    ul {
-      line-height: 1.8;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>About</title>
+  <link rel="stylesheet" href="index.html">
 </head>
 <body>
-  <h2>About Me</h2>
-  <ul>
-    <li>3rd Year IT Student</li>
-    <li>Completed full school education in government institutions</li>
-    <li>Qualified under 7.5% reservation scheme</li>
-    <li>Attended several symposiums and presented seminars</li>
-    <li>Player of Tenicket (a ring ball game)</li>
-    <li>Leadership experience as a team/group leader</li
-    <li>Strong skills in communication, leadership, and coordination</li>
-  </ul>
+  <!-- same sidebar + scroll btn + script from index.html -->
+  <div class="content">
+    <h1>About Me</h1>
+    <ul>
+      <li>3rd-year B.Tech IT student</li>
+      <li>Passionate about Full Stack Development</li>
+      <li>Participated in many symposiums and presented PPTs</li>
+      <li>Delivered seminars on technical topics</li>
+      <li>Actively learning new technologies</li>
+    </ul>
+  </div>
 </body>
-  <nav>
-    <a href="index.html">Home
-  </nav>
-
-
-  
 
   
