--- a/skills.html
+++ b/skills.html
@@ -1,50 +1,24 @@
-<!DOCTYPE html><html lang="en">
+</html><!-- =============================== --><!--       skills.html (SKILLS)      --><!-- =============================== --><!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Skills</title>
-  <style>
-    body {
-      background-color: #e0f7fa;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #333;
-      padding: 2em;
-    }
-    h2 {
-      color: #00796b;
-      text-align: center;
-    }
-    .skills {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1em;
-    }
-    .skill {
-      background: #b2dfdb;
-      padding: 1em 2em;
-      border-radius: 12px;
-      font-weight: bold;
-      box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
-    }
-  </style>
+  <link rel="stylesheet" href="index.html">
 </head>
 <body>
-  <h2>My Skills</h2>
-  <div class="skills">
-    <div class="skill">HTML</div>
-    <div class="skill">CSS</div>
-    <div class="skill">JavaScript</div>
-    <div class="skill">Python</div>
-    <div class="skill">Git & GitHub</div>
-    <div class="skill">Leadership</div>
-    <div class="skill">Communication</div>
-    <div class="skill">Hindi Language</div>
+  <!-- same sidebar + scroll btn + script from index.html -->
+  <div class="content">
+    <h1>My Skills</h1>
+    <ul>
+      <li>HTML, CSS, JavaScript</li>
+      <li>Python (Beginner level)</li>
+      <li>Git & GitHub</li>
+      <li>VS Code</li>
+      <li>Basics of React JS</li>
+      <li>UI/UX Design Concepts</li>
+    </ul>
   </div>
 </body>
-  <nav>
-    <a href="index.html">Home
-  </nav>
+
  
 
    
