--- a/contact.html
+++ b/contact.html
@@ -1,39 +1,18 @@
-</html><!-- contact.html --><!DOCTYPE html><html lang="en">
+   </html><!-- =============================== --><!--      contact.html (CONTACT)     --><!-- =============================== --><!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #fff8dc;
-      padding: 2em;
-      color: #333;
-    }
-    h2 {
-      text-align: center;
-      color: #ff7f50;
-    }
-    .contact-info {
-      text-align: center;
-      margin-top: 2em;
-    }
-    .contact-info p {
-      margin: 0.5em 0;
-    }
-    .label {
-      font-weight: bold;
-    }
-  </style>
+  <link rel="stylesheet" href="index.html">
 </head>
 <body>
-  <h2>Contact Me</h2>
-  <div class="contact-info">
-    <p><span class="label">Email:</span> priyasofee@gmail.com</p>
-    <p><span class="label">Instagram:</span>https://www.instagram.com/priya_._sofiya?igsh=MWZqanJoZWpzb29nZQ==</p>
+  <!-- same sidebar + scroll btn + script from index.html -->
+  <div class="content">
+    <h1>Contact Me</h1>
+    <ul>
+      <li><strong>Name:</strong> Priya</li>
+      <li><strong>Email:</strong> priyasofee@gmail.com</li>
+      <li><strong>Instagram:</strong> https://www.instagram.com/priya_._sofiya?igsh=MWZqanJoZWpzb29nZQ==</li>
+    </ul>
   </div>
 </body>
 </html>
-<nav>
-    <a href="index.html">Home
-  </nav>
