--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <div class="content">
     <h1>Contact Me</h1>
     <ul>
-      <li><strong>Name:</strong> Priya</li>
+      <li><strong>Name:</strong> Sofiya T</li>
       <li><strong>Email:</strong> priyasofee@gmail.com</li>
       <li><strong>Instagram:</strong> https://www.instagram.com/priya_._sofiya?igsh=MWZqanJoZWpzb29nZQ==</li>
     </ul>
