--- a/skills.html
+++ b/skills.html
@@ -15,6 +15,8 @@
       <li>VS Code</li>
       <li>Basics of React JS</li>
       <li>UI/UX Design Concepts</li>
+      <li><strong>Languages Known:</strong> English, Tamil, Hindi</li>
+                                
     </ul>
   </div>
 </body>
