--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- =============================== --><!--        index.html (HOME)       --><!-- =============================== --><!DOCTYPE html><html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Home</title>
