--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-</html><!-- =============================== --><!--        about.html (ABOUT)       --><!-- =============================== --><!DOCTYPE html><html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>About</title>
