--- a/skills.html
+++ b/skills.html
@@ -1,4 +1,4 @@
-</html><!-- =============================== --><!--       skills.html (SKILLS)      --><!-- =============================== --><!DOCTYPE html><html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Skills</title>
