--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-   </html><!-- =============================== --><!--      contact.html (CONTACT)     --><!-- =============================== --><!DOCTYPE html><html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Contact</title>
