--- a/about.html
+++ b/about.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>About</title>
-  <link rel="stylesheet" href="index.html">
+  <title>About Me</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- same sidebar + scroll btn + script from index.html -->
-  <div class="content">
-    <h1>About Me</h1>
-    <ul>
-      <li>3rd-year B.Tech IT student</li>
-      <li>Passionate about Full Stack Development</li>
-      <li>Participated in many symposiums and presented PPTs</li>
-      <li>Delivered seminars on technical topics</li>
-      <li>Actively learning new technologies</li>
-    </ul>
-  </div>
+  <header>About Me</header>
+
+  <p>💬 I am a passionate IT student who loves to learn and explore new technologies.</p>
+  <p>📚 Attended many symposiums, taught seminars, and actively involved in college activities.</p>
+  <p>🌟 Currently studying 3rd year B.Tech IT under Anna University.</p>
+
+  <a class="go-home" href="index.html">Go to Home</a>
+
+  <footer>© 2025 Priya</footer>
 </body>
+</html>
+      
 
   
