--- a/skills.html
+++ b/skills.html
@@ -1,26 +1,24 @@
-<!DOCTYPE html><html lang="en">
+
+      
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Skills</title>
-  <link rel="stylesheet" href="index.html">
+  <title>My Skills</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- same sidebar + scroll btn + script from index.html -->
-  <div class="content">
-    <h1>My Skills</h1>
-    <ul>
-      <li>HTML, CSS, JavaScript</li>
-      <li>Python (Beginner level)</li>
-      <li>Git & GitHub</li>
-      <li>VS Code</li>
-      <li>Basics of React JS</li>
-      <li>UI/UX Design Concepts</li>
-      <li><strong>Languages Known:</strong> English, Tamil, Hindi</li>
-                                
-    </ul>
-  </div>
-</body>
+  <header>My Skills</header>
 
+  <p>💻 HTML, CSS, JavaScript</p>
+  <p>🌐 Basic React & Node.js knowledge</p>
+  <p>🛠️ Git, GitHub, Responsive Web Design</p>
+  <p>🧠 Strong logic and problem-solving skills</p>
+
+  <a class="go-home" href="index.html">Go to Home</a>
+
+  <footer>© 2025 Priya</footer>
+</body>
+</html>
  
 
    
