--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,22 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>Contact</title>
-  <link rel="stylesheet" href="index.html">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- same sidebar + scroll btn + script from index.html -->
-  <div class="content">
-    <h1>Contact Me</h1>
+  <header>Contact Me</header>
+
+  <p>📞 Name: Sofiya T</p>
+  <p>📸 Instagram: https://www.instagram.com/priya_._sofiya?igsh=MWZqanJoZWpzb29nZQ==</p>
+  
+  <p>📧 Email: priyasofee@gmail.com</p>
+
+  <a class="go-home" href="index.html">Go to Home</a>
+
+  <footer>© 2025 Priya</footer>
+</body>
+</html>
     <ul>
       <li><strong>Name:</strong> Sofiya T</li>
       <li><strong>Email:</strong> priyasofee@gmail.com</li>
