--- a/skills.html
+++ b/skills.html
@@ -13,6 +13,7 @@
   <p>🌐 Basic React & Node.js knowledge</p>
   <p>🛠️ Git, GitHub, Responsive Web Design</p>
   <p>🧠 Strong logic and problem-solving skills</p>
+  <p>🗣️Languages Known:Tamil,Hindi, English</p>
 
   <a class="go-home" href="index.html">Go to Home</a>
 
