--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   </header>
   <h1>Hello! I'm Sofiya 👋</h1>
   <p>Explore my work and know more about me!</p>
-  <div class="arrow">⬇️</div>
-
+  <!-- 🆕 Vertical navigation -->
   <nav>
     <a href="about.html">About</a> |
     <a href="skills.html">Skills</a> |
